--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This file was created by IntelliJ IDEA 11.0 RC2 for binding GitHub repository
-This file was modified by IntelliJ IDEA 11.0 RC2 for binding GitHub repository
+Unni-test is an accompanying project for my talk "Unni-the-test and Co". 
+Link to the presentation to be added.
