--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Unni-test is an accompanying project for my talk "Unni-the-test and Co". 
 Link to the presentation to be added.
+
+Feel free to clone and play with it. 
+To run it, just do *mvn test*
